# StarCCM_wrapper

./: MANIFEST.in  PKG-INFO  README.txt  setup.cfg  setup.py
src/StarCCM/: StarCCM.py
src/StarCCM/test/: test_StarCCM.py
