[metadata]
name = StarCCM
version = 0.0.1
summary = OpenMDAO interface to CD-adapco's STAR-CCM+, CFD Simulation Software
description-file = README.txt
keywords = openmdao, Star-CCM+, CFD, volume mesh
home-page = 
download-url = 
author = 
author-email = 
maintainer = 
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.7
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

